Omnibox - Allow On-Focus Suggestions on Android Incognito

Instead of a blanket prohibition, each provider can make its own
decisions about when to trigger and when not to.

Currently I believe the only provider that will sometimes trigger is
clipboard URL provider.

BUG=708774

Review-Url: https://codereview.chromium.org/2812793002
Cr-Commit-Position: refs/heads/master@{#463528}